--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,17 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
-wasm-bindgen = "0.2.63"
 console_error_panic_hook = "0.1.6"
+js-sys = "0.3.47"
+serde_json = "1.0.61"
+serde = "1.0.123"
+
+[dependencies.wasm-bindgen]
+version = "0.2.63"
+features = [
+    "serde-serialize"
+]
+
 
 [dependencies.web-sys]
 version = "0.3.47"
