--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "rollup rust startup",
   "main": "index.js",
   "scripts": {
+    "bootstrap": "rollup -c rollup-bootstrap.config.js > /dev/null",
     "start": "rm -rf ./dist && cross-env NODE_ENV=development rollup --config --watch",
     "build": "rm -rf ./dist && cross-env NODE_ENV=production rollup --config"
   },
