--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
   },
   "homepage": "https://github.com/msyfls123/rollup-rust#readme",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-html": "^0.2.0",
-    "@rollup/plugin-node-resolve": "^11.1.0",
-    "@rollup/plugin-typescript": "^8.1.0",
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-html": "^0.2.2",
+    "@rollup/plugin-node-resolve": "^11.1.1",
     "@wasm-tool/rollup-plugin-rust": "^1.0.5",
     "cross-env": "^7.0.3",
-    "rollup": "^2.38.0",
+    "rollup": "^2.38.5",
     "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-serve": "^1.1.0"
-  }
+    "rollup-plugin-serve": "^1.1.0",
+    "rollup-plugin-typescript2": "^0.29.0",
+    "tslib": "^2.1.0",
+    "typescript": "^4.1.5"
+  },
+  "dependencies": {}
 }
