--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,4 +27,10 @@ version = "0.3.47"
 features = [
     "console",
     "Window",
+    "Document",
+    "Element",
+    "HtmlElement",
+    "EventListener",
+    "EventTarget",
+    "MouseEvent",
 ]
